--- a/index.css
+++ b/index.css
@@ -1,33 +1,103 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+body::-webkit-scrollbar {
+  width: 1em;
+}
+ 
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color:black;
+  outline: 1px solid slategrey;
+}
+
+body{
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+}
 /* Header */
 header{
     
     width: 100vw;
-    height:24vh;
+    height:25vh;
+    min-height: 130px;
     position: relative;
-    background-image: url(body.jfif);
+    background-image: url(./asset/body.jfif);
     
 }
 /* Nav section */
-nav{
+.static{
 
-    font-weight:600;
+    /* font-weight:550px; */
     font-size:large;
     position:absolute;
-    right: 10mm;
-    top: 1.5cm;
-    
-    
-}
+    right: 3%;
+    top: 50%;
+    }
+    .dropdown{
+        text-align: right;
+    }
+    .drop{
+        text-decoration: none;
+    }
+    label{
+        margin: 0 40px 0 0;
+        font-size: 26px;
+        line-height: 70px;
+        display: none;
+        width: 26px;
+        float: right;
+    }
+    .menu{
+        display: none;
+    }
+    .menu a {
+        clear: right;
+    text-decoration: none;
+    color: gray;
+    margin: 0 10px;
+    line-height: 70px;
+    }
+   
 /* Name and Social */
+.namebox{
+    width: 50%;
+    height:60%;
+    position: relative;
+    top: 15%;
+    left: 5%;
+}
 .name{
     position:absolute;
-    top:0.1cm;
-    left:2cm;
+    top:27%;
+    left:4%;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color:lemonchiffon;
-    font-size:4vw;
+    font-size:280%;
+}
+
+
+.socialBox{
+    height: 100%;
+    width: 17%;
+    min-width: 100px;
+    position:absolute;
+    left:7%;
+    top: 75%;
     
 }
+.socialCon{
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    height: 100%; 
+}
+
 .social{
     width: 1.7vw;
     }
@@ -37,20 +107,6 @@ nav{
         
     }
 
-.socialCon{
-    list-style-type: none;
-    display: flex;
-    gap:20px;
-    position: relative;
-    height: 1.7vh;
-    
-}
-.socialBox{
-    position:absolute;
-    left:1cm;
-    bottom: 0.4cm;
-    
-}
 
 /* Diffrent section buttons */
 .button{
@@ -61,8 +117,9 @@ nav{
     font-family:monospace;
     text-decoration: none;
     font-size:1.2vw;
+    font-weight: 200px;
     margin: 2px;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
 }
 .button:hover{
     border-bottom: 3px solid darkolivegreen;
@@ -76,14 +133,17 @@ nav{
 /* Main */
 /* About me */
 .aboutMain h2{
+    width: 100vw;
+    height: 90%;
     margin: 15px;
     margin-top: 20px;
     margin-left:30px;
     line-height: 35px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: xx-large;
+    font-size:185%;
     font-weight:bolder;
     background-attachment: fixed;
+    
 }
 .about{
     width: 60vw;
@@ -97,48 +157,381 @@ nav{
     display: flex;
     flex-direction: column;
    align-items: flex-start;
+
+   background-image: url(./asset/2.jpg);
+    background-attachment:fixed;
   
 }
 /* Skills */
+
+.skillMain{
+    width: 100vw;
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 15px;
+    padding-bottom: 120px;
+    border: 3px dotted gainsboro;
+    background-image: url(./asset/1.jpg);
+}
+
 
 .skillMain h2{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: xx-large;
     font-weight:bolder;
+    margin-top: 30px;
 }
 
-.skillMain{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 .skillimg{
     width: 30px;
 }
-body{
-    overflow-x: hidden;
+.inboxskill{
+    width: 80%;
+    height: 41%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items:center;
+    justify-content: space-around;
+   gap: 12%;
+    margin-top: 7%;
 }
-
-
-
-
-
-
-
-
-
-
-
-/* General */
-main div:nth-child(2n+1){
-    background-image: url(2.jpg);
-    background-attachment:fixed;
-
-
-}
-main div:nth-child(2n){
-    background-image: url(1.jpg);
-    background-attachment:fixed;
-
+.skill{
+    
+    height: 100%;
+    min-height: 41px;
+    font-size: 130%;
+    font-weight: bolder;
+    font-family:Inconsolata;
+    color:darkblue;
+    border-radius: 20px;
+    display: flex;
+    padding-left: 10px;
+    align-items: center;
+    gap: 5px;
+   
     
 }
+
+.outerskill{
+    padding: 0;
+    background-color: white;
+    border-radius: 20px;
+    width: 22%;
+    min-width: 200px;
+    height: 22.7%;
+    min-height: 42px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#html{
+    background-color: thistle;
+    width: 70%;
+    height: 40px;
+}
+#css{
+    background-color:chocolate;
+    width: 40%;
+    height: 40px;
+    
+}
+
+#js{
+    background-color:darkgray;
+    width: 20%;
+    height: 40px;
+}
+#c{
+    background-color:darkseagreen;
+    width: 70%;
+    height: 40px;
+}
+#cpp{
+    background-color:gold;
+    width: 50%;
+    height: 40px;
+}
+
+
+
+.skillperc{
+    font-size: large;
+    font-weight: bolder;
+    font-family:Inconsolata;
+    padding-right: 10px;
+}
+
+
+
+/* Timeline */
+
+.timelineMain{
+     width:100vw;
+    height: 150vh;
+    min-height:300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url(./asset/2.jpg);
+    background-attachment: fixed;
+    margin-top: 1%;
+    }
+
+.timelineMain h2{
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 40px;
+    font-weight:bold;
+    margin-top: 15%;
+    /* margin-bottom: 100px; */
+    margin-bottom: 15%;
+}
+
+.timeimg{
+    width: 35px;
+}
+.timelineCon{
+    width: 93vw;
+    min-width: 1100px;
+    /* min-width: ; */
+    height: 120vh;
+    /* border: 1px solid black; */
+    margin-right:1%;
+    margin-left:0.5%;
+    margin-top: -2%;
+    /* border-top: 2px solid black; */
+   position: relative;
+}
+
+.timeline{
+    width: 23%;
+    min-width: 5px;
+    /* min-width: 200px; */
+    height: 27%;
+    /* min-height:180px; */
+    /* border: 3px solid gray; */
+    position: relative;
+    left: 16%;
+    
+    
+}
+.timeline:nth-child(2n+1){
+    left: 53.6%;
+}
+.timeline h6{
+    position: relative;
+    top:4%;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.b1 h6{
+    font-size: 63%;
+}
+
+
+.timeline p{
+    font-family: monospace;
+    position: relative;
+    top: 30%;
+}
+
+
+.b1{
+    background-image: linear-gradient(to right,cadetblue 0.5%,black 10% );
+    border-radius: 8px;
+    padding: 0.5rem 3rem;
+    text-align: right;
+    color: skyblue;
+    margin-top: 70px;
+    font-size: 31px;
+    position: relative;
+    
+}
+.b1::after{
+    content: '';
+    position: absolute;
+    top: 55%;
+    /* right: -11.6%; */
+    left:107.7%;
+    border-radius: 50%;
+    transform: rotate(45deg);
+    width: 0.9rem;
+    height: 0.9rem;
+    background-color:black;
+    z-index: 1;
+    
+}
+
+.b1::before{
+    content: url(./asset/school.svg);
+    display: inline-block;
+    width: 13%;
+    position: absolute;
+    left: -25%;
+    top: 25%;
+    
+}
+
+.b2{
+    background-image: linear-gradient(to left,yellow 0.5%,black 10%);
+    border-radius: 8px;
+    padding: 0.5rem 3rem;
+    text-align: left;
+    color: yellow;
+    font-size: 31px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.b2::after{
+    content: url(./asset/achievment.svg);
+    display: inline-block;
+    width: 13%;
+    position: absolute;
+    right: -24%;
+    top: 25%;
+    
+}
+.b2::before{
+    content: '';
+    position: absolute;
+    top: 55%;
+    left: -12.7%;
+    border-radius: 1%;
+    transform: rotate(45deg);
+    width: 0.9rem;
+    height: 0.9rem;
+    background-color:black;
+    z-index: 1;
+    
+}
+
+.b3{
+    background-image: linear-gradient(to right,green 0.5%,black 10% );
+    border-radius: 8px;
+    padding: 0.5rem 3rem;
+    text-align: right;
+    color: greenyellow;
+    font-size: 31px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.b3::before{
+    content: url(./asset/college.svg);
+    display: inline-block;
+    width: 13%;
+    position: absolute;
+    left: -25%;
+    top: 25%;
+    
+}
+.b3::after{
+    content: '';
+    position: absolute;
+    top: 55%;
+    /* right: -11.6%; */
+    left:107.7%;
+    border-radius: 50%;
+    transform: rotate(45deg);
+    width: 0.9rem;
+    height: 0.9rem;
+    background-color:black;
+    z-index: 1;
+    
+}
+
+.divider{
+    width:0px;
+    position:absolute;
+    border: 2px dashed black;
+    background-color:gainsboro;
+    left:50%;
+    right: 49%;
+    top: 25%;
+    height: 79%;
+    padding: 0;
+    text-align: center;
+}
+@media screen and (max-width:790px) {
+    .divider{
+        left:30%;
+        top: 22%;
+        height: 82%;
+    }
+    .b3::after{
+        left: -19%;
+    }
+    .b3::before{
+        left:112%;
+    }
+    .b2::before{
+        left:-19%;
+    }
+    .b1::after{
+        left: -19%;
+    }
+    .b1::before{
+        left:112%;
+    }
+
+    .b1 h6{
+        font-size: 51%;
+    }
+    .timeline{
+        left: 35%;
+        height: 25%;
+        width: 20%;
+        margin-bottom: 3%;
+       
+    }
+    .timeline:nth-child(2n+1){
+        left: 35%;
+        height: 25%;
+        width: 20%;
+        /* margin-bottom: 2%; */
+    }
+    
+}
+
+.mover{
+    position: sticky;
+    top:40%;
+    /* right: 100%; */
+    left: 10px;
+    transform: rotate(90deg);
+   
+}
+.fas{
+    width: 40px;
+    
+}
+.down{
+    width: 21px;
+    position: relative;
+    right:10px;
+    top: 90%;
+}
+
+
+.time{
+    position: relative;
+    top: -20px;
+    font-size: 20px;
+    font-weight: bold;
+    color:white;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* footer */
+
+
+
